<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="50dp"
    android:gravity="center"
    tools:context=".MainActivity"
    android:background="@drawable/background">
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/itenas"
        android:layout_gravity="center" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/itenas"
        android:textSize="40sp"
        android:textStyle="bold" />
    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textAlignment="center"
        android:textSize="25sp" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/nama"
        android:textAlignment="center"
        android:singleLine="true" />
    <EditText
        android:id="@+id/password"
        android:inputType="textWebPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:textAlignment="center"
        android:singleLine="true" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Login"
        style = "@style/RoundedButton"
        android:text="Login"
        android:layout_width="match_parent" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textAlignment="center"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account? Click" />
        <TextView
            android:id="@+id/Register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" Here "
            android:textColor="@color/purple"
            android:clickable="true"
            android:focusable="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="to Register" />
    </LinearLayout>
</LinearLayout>