<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration"
    android:gravity="center"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="@drawable/background">
    <androidx.cardview.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:contentPadding="16dp"
        app:cardElevation="2dp"
        app:cardCornerRadius="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="20dp"
            android:padding="20dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/header_registrasi"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="30dp" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="Username:"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/username_register"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/nama"
                android:textAlignment="center"
                android:background="@drawable/border" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="Password:"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/password_register"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/password"
                android:textAlignment="center"
                android:background="@drawable/border" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="Confirm Password:"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/password_con"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/confirm_password"
                android:textAlignment="center"
                android:background="@drawable/border" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonRegister"
                style = "@style/RoundedButton"
                android:text="@string/button"
                android:layout_width="match_parent" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:textAlignment="center"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Already have an account? Click" />
                <TextView
                    android:id="@+id/buttonkembali"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" Here "
                    android:textColor="@color/purple"
                    android:clickable="true"
                    android:focusable="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="to Login" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>