<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@color/menu">
        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="10dp"
            android:src="@drawable/baseline_arrow_back"
            android:clickable="true"
            android:focusable="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="    Halaman Fakultas"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="20dp"
            android:background="@color/menu"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Faculty"
        android:orientation="vertical"
        android:background="@drawable/background">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <androidx.cardview.widget.CardView
                android:layout_width="375dp"
                android:layout_height="wrap_content"
                app:contentPadding="16dp"
                app:cardElevation="2dp"
                app:cardCornerRadius="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="FAKULTAS TEKNOLOGI INDUSTRI"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20dp"/>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:src="@drawable/info"
                        android:layout_gravity="center"/>
                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20dp"/>
                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fakul"
                        android:justificationMode="inter_word"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <androidx.cardview.widget.CardView
                android:layout_width="375dp"
                android:layout_height="wrap_content"
                app:contentPadding="16dp"
                app:cardElevation="2dp"
                app:cardCornerRadius="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="FAKULTAS TEKNIK SIPIL DAN PERENCANAAN"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20dp"/>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:src="@drawable/sip"
                        android:layout_gravity="center"/>
                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ftsp"
                        android:justificationMode="inter_word"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <androidx.cardview.widget.CardView
                android:layout_width="375dp"
                android:layout_height="wrap_content"
                app:contentPadding="16dp"
                app:cardElevation="2dp"
                app:cardCornerRadius="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="FAKULTAS ARSITEKTUR DAN DESAIN"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20dp"/>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:src="@drawable/arsi"
                        android:layout_gravity="center"/>
                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fad"
                        android:justificationMode="inter_word"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
